force-app/main/default/objects/APXT_BPM__Conductor__c/APXT_BPM__Conductor__c.object-meta.xml
<CustomObject>
    <articleTypeChannelDisplay n1:nil="true"/>
    <customSettingsType n1:nil="true"/>
    <description n1:nil="true"/>
    <eventType n1:nil="true"/>
    <gender n1:nil="true"/>
    <household>false</household>
    <label>Conga Conductor</label>
    <nameField>
        
        <displayFormat>Conductor-{0000}</displayFormat>
        
        <label>Conductor Name</label>
        
        
        <type>AutoNumber</type>
        
    </nameField>
    <pluralLabel>Conga Conductors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <startsWith n1:nil="true"/>
</CustomObject>