force-app/main/default/objects/APXT_BPM__Conductor__c/fields/Apply_Overpay_Adjust__c.field-meta.xml
<CustomField>
    <fullName>Apply_Overpay_Adjust__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply Overpayments/Adjustments</label>
    <type>Checkbox</type>
</CustomField>