force-app/main/default/objects/APXT_BPM__Conductor__c/fields/APXT_BPM__Conductor_Environment__c.field-meta.xml
<CustomField>
    <fullName>APXT_BPM__Conductor_Environment__c</fullName>
    <description>ONLY USED BY CONGA SUPPORT

* Recommended to remove from page layout when not in use *</description>
    <label>Conductor Environment</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>prod-</fullName>
                
                    <default>true</default>
                
                    <label>prod-</label>
                
                </value>
            
                <value>
                
                    <fullName>staging-</fullName>
                
                
                    <label>staging-</label>
                
                </value>
            
                <value>
                
                    <fullName>beta-</fullName>
                
                
                    <label>beta-</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>