force-app/main/default/objects/APXT_BPM__Conductor__c/fields/APXT_BPM__Consolidated_PDF_Output_File__c.field-meta.xml
<CustomField>
    <fullName>APXT_BPM__Consolidated_PDF_Output_File__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Combine PDFs into a single file when scheduling a consolidated Conductor routine and delivering to a Content Workspace.</inlineHelpText>
    <label>Consolidated PDF Output File</label>
    <type>Checkbox</type>
</CustomField>