force-app/main/default/objects/APXT_BPM__Conductor__c/fields/APXT_BPM__Content_Workspace_Id__c.field-meta.xml
<CustomField>
    <fullName>APXT_BPM__Content_Workspace_Id__c</fullName>
    <inlineHelpText>The ID of a Content Library where files from a scheduled Conductor process will be stored when the output mode is set to download.</inlineHelpText>
    <label>Content Workspace ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>