force-app/main/default/objects/APXT_BPM__Conductor__c/fields/APXT_BPM__Description__c.field-meta.xml
<CustomField>
    <fullName>APXT_BPM__Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>