force-app/main/default/objects/APXT_BPM__Conductor__c/fields/APXT_BPM__Next_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>APXT_BPM__Next_Run_Date__c</fullName>
    <inlineHelpText>Determined by &quot;Schedule&quot; button.  Do not edit this field manually.</inlineHelpText>
    <label>Next Run Date</label>
    <type>DateTime</type>
</CustomField>