force-app/main/default/objects/APXT_BPM__Conductor__c/fields/APXT_BPM__Query_Id__c.field-meta.xml
<CustomField>
    <fullName>APXT_BPM__Query_Id__c</fullName>
    <inlineHelpText>2 Pages: a270a000001dEB3
4 Pages: a270a000001dEB8</inlineHelpText>
    <label>Query ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>