force-app/main/default/objects/APXT_BPM__Conductor__c/fields/APXT_BPM__Record_Id__c.field-meta.xml
<CustomField>
    <fullName>APXT_BPM__Record_Id__c</fullName>
    <inlineHelpText>An individual Salesforce record ID to use as a Master Object ID.</inlineHelpText>
    <label>Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>