force-app/main/default/objects/APXT_BPM__Conductor__c/fields/APXT_BPM__Report_Id__c.field-meta.xml
<CustomField>
    <fullName>APXT_BPM__Report_Id__c</fullName>
    <inlineHelpText>The ID of a Salesforce Report that contains the list of Master Object IDs. Optionally, the report may include other columns.</inlineHelpText>
    <label>Report ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>