force-app/main/default/objects/APXT_BPM__Conductor__c/fields/APXT_BPM__Schedule_Description_Display__c.field-meta.xml
<CustomField>
    <fullName>APXT_BPM__Schedule_Description_Display__c</fullName>
    <formula>APXT_BPM__Schedule_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically populated by the Conductor schedule.</inlineHelpText>
    <label>Schedule Description</label>
    <type>Text</type>
</CustomField>