force-app/main/default/objects/APXT_BPM__Conductor__c/fields/APXT_BPM__Title__c.field-meta.xml
<CustomField>
    <fullName>APXT_BPM__Title__c</fullName>
    <label>Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>