force-app/main/default/objects/APXT_BPM__Conductor__c/fields/APXT_BPM__URL_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>APXT_BPM__URL_Field_Name__c</fullName>
    <inlineHelpText>Send_Bill_Conga_Calc__c (PDF)
Conga_Letter_Stream_Merge__c (Print)</inlineHelpText>
    <label>URL Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>