force-app/main/default/objects/APXT_BPM__Conductor__c/fields/APXT_BPM__Version__c.field-meta.xml
<CustomField>
    <fullName>APXT_BPM__Version__c</fullName>
    <description>Used to upgrade from prior versions of Conga Conductor.

* Recommended to remove from page layout when not in use *</description>
    <label>Version</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>C8</fullName>
                
                    <default>true</default>
                
                    <label>C8</label>
                
                </value>
            
                <value>
                
                    <fullName>C7</fullName>
                
                
                    <label>C7</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>