force-app/main/default/objects/APXT_BPM__Conductor__c/fields/Assign_Templates__c.field-meta.xml
<CustomField>
    <fullName>Assign_Templates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assign Templates</label>
    <type>Checkbox</type>
</CustomField>