force-app/main/default/objects/APXT_BPM__Conductor__c/fields/Emails_Sent__c.field-meta.xml
<CustomField>
    <fullName>Emails_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emails Sent</label>
    <type>Checkbox</type>
</CustomField>