force-app/main/default/objects/APXT_BPM__Conductor__c/fields/Instructions__c.field-meta.xml
<CustomField>
    <fullName>Instructions__c</fullName>
    <formula>IMAGE(&quot;https://c.na54.visual.force.com/resource/1509631903000/Conga_Instructions&quot;, &apos;Did not Load&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instructions</label>
    <type>Text</type>
</CustomField>