force-app/main/default/objects/APXT_BPM__Conductor__c/fields/Link_to_Window__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Window__c</fullName>
    <formula>&quot;https://conductor.congamerge.com/Conductor8/index.html?SessionId=&quot;
&amp;$Api.Session_ID
&amp;&quot;&amp;ServerUrl=&quot;
&amp;$Api.Partner_Server_URL_290
&amp;&quot;&amp;Id=&quot;
&amp;Id
&amp;&quot;&amp;ReportId=&quot;
&amp;APXT_BPM__Report_Id__c
&amp;&quot;&amp;RecordId=&quot;
&amp;APXT_BPM__Record_Id__c 
&amp;&quot;&amp;UrlFieldName=Send_Bill_Conga_Calc__c&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link to Window</label>
    <type>Text</type>
</CustomField>