force-app/main/default/objects/APXT_BPM__Conductor__c/validationRules/APXT_BPM__Query_Id_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>APXT_BPM__Query_Id_Length</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  APXT_BPM__Query_Id__c != &quot;&quot; ,

OR( LEN(  APXT_BPM__Query_Id__c  ) &gt; 18 ,
LEFT(  APXT_BPM__Query_Id__c , 1) != &quot;a&quot; ))</errorConditionFormula>
    <errorDisplayField>APXT_BPM__Query_Id__c</errorDisplayField>
    <errorMessage>The Query Id must be a 15- or 18-character Salesforce ID from a Conga Query</errorMessage>
</ValidationRule>